Bug 1653750 - Set the fill color on menu-iconic-icon (to make Address book icons in Composition Options not invisible in dark mode). r=aleca

--- a/mail/themes/shared/mail/preferences/preferences.css
+++ b/mail/themes/shared/mail/preferences/preferences.css
@@ -581,6 +581,11 @@ html|input.indent {
   font-size: .8em;
 }
 
+.menu-iconic-icon {
+  -moz-context-properties: fill;
+  fill: currentColor;
+}
+
 #datePrefsBox {
   display: grid;
   grid-template-columns: auto 1fr 1fr;
